--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,18 +1,16 @@
 <h1>Edit Task</h1>
 <%= form_for(@task) do |f| %>
   <div class="form-group">
-    <p><%= f.label :title %></p>
-    <p><%= f.text_field :title %></p>
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
   <div class="form-group">
-    <p><%= f.label :details %></p>
-    <p><%= f.text_field :details %></p>
+    <%= f.label :details %>
+    <%= f.text_field :details, class: "form-control" %>
   </div>
-  <div class="form-group">
-    <p><%= f.check_box :completed, {}, checked = true%> Completed</p>
-  </div>
+    <%= f.check_box :completed, {}, checked = true%> Completed
   <div>
-    <p><%= f.submit %></p>
+    <%= f.submit "Update Taks", class: "btn btn-primary" %>
   </div>
 <% end %>
 <p><%= link_to '<i class="fa fa-reply" aria-hidden="true"></i> Back to list'.html_safe, tasks_path %></p>
